--- a/src/main/webapp/css/variable.css
+++ b/src/main/webapp/css/variable.css
@@ -4,7 +4,7 @@
   --iq-title-text: #11141b;
   --iq-body-text: #777D74;
   --iq-body-bg : #fbfcff;
-  --iq-primary: #f9ae02;
+  --iq-primary: #0dd6b8;
   --iq-secondary: #a09e9e;
   --iq-success: #49f0d3;
   --iq-warning: #ffba68;
